# SignalsVisualizer

./: Cargo.toml  README.md
SignalsVisualizer/: Cargo.toml
SignalsVisualizer/src/: main.rs  router.rs
SignalsVisualizer/src/generator/: point.rs  signals.rs
SignalsVisualizer/src/handlers/: index.rs
SignalsVisualizer/src/models/: templates.rs
SignalsVisualizer/static/css/: index.css
SignalsVisualizer/static/js/: home.js
SignalsVisualizer/templates/: index.html
src/: main.rs  router.rs
src/generator/: generator.rs  mod.rs  point.rs  signaler.rs  signals.rs
src/handlers/: index.rs
src/models/: templates.rs
static/css/: index.css
static/js/: home.js
templates/: index.html
