[package]
name = "SignalsVisualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Tokio
tokio = { version = "1.52.3", features = ["full"] }
# Axum
axum = { version = "0.8.9", features = ["ws"] }
askama = "0.16.0"
futures = "0.3.32"
futures-util = "0.3.32"
tower-http = { version = "0.7.0", features = ["fs"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
ringbuf = "0.5"
